# ProductScraper

./: README.md  pyproject.toml
src/: scraper.py
tests/: test_scraper.py
